// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<ul>
  <li
    class="document-outline__item is-h2"
  >
    <a
      class="document-outline__button"
      href="#block-clientId_0"
    >
      <span
        aria-hidden="true"
        class="document-outline__emdash"
      />
      <strong
        class="document-outline__level"
      >
        H2
      </strong>
      <span
        class="document-outline__item-content"
      >
        Heading 2
      </span>
    </a>
  </li>
  <li
    class="document-outline__item is-h3"
  >
    <a
      class="document-outline__button"
      href="#block-clientId_1"
    >
      <span
        aria-hidden="true"
        class="document-outline__emdash"
      />
      <strong
        class="document-outline__level"
      >
        H3
      </strong>
      <span
        class="document-outline__item-content"
      >
        Heading 3
      </span>
    </a>
  </li>
</ul>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<ul>
  <li
    class="document-outline__item is-h1 is-invalid"
  >
    <a
      class="document-outline__button"
      href="#block-clientId_0"
    >
      <span
        aria-hidden="true"
        class="document-outline__emdash"
      />
      <strong
        class="document-outline__level"
      >
        H1
      </strong>
      <span
        class="document-outline__item-content"
      >
        Heading 1
        <br />
        <em>
          (Multiple H1 headings are not recommended)
        </em>
      </span>
    </a>
  </li>
  <li
    class="document-outline__item is-h1 is-invalid"
  >
    <a
      class="document-outline__button"
      href="#block-clientId_2"
    >
      <span
        aria-hidden="true"
        class="document-outline__emdash"
      />
      <strong
        class="document-outline__level"
      >
        H1
      </strong>
      <span
        class="document-outline__item-content"
      >
        Heading 1
        <br />
        <em>
          (Multiple H1 headings are not recommended)
        </em>
      </span>
    </a>
  </li>
</ul>
`;
